Fix header menu alignment (caused by adding search bar)

--- a/resources/css/src/component/_header.scss
+++ b/resources/css/src/component/_header.scss
@@ -35,7 +35,7 @@
 
     .menu-nav {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: flex-end;
 
       .header-core-nav,
@@ -54,10 +54,6 @@
 
   @include breakpoint(medium down) {
     .header-menu {
-      .menu-search {
-        margin-top: .5rem;
-      }
-
       .menu-cart {
         margin-bottom: 0;
         padding-left: 0;
@@ -65,6 +61,15 @@
 
       .menu-nav {
         padding-right: 0;
+        align-items: flex-start;
+      }
+    }
+  }
+
+  @include breakpoint(small down) {
+    .header-menu {
+      .menu-search {
+        margin-top: .5rem;
       }
     }
   }
